rds.tf
resource "aws_db_subnet_group" "main" {
  name       = "main"
  subnet_ids = [aws_subnet.private_subnet_1.id, aws_subnet.private_subnet_2.id]

  tags = {
    Name = "Main DB Subnet Group"
  }
}

resource "aws_db_instance" "devops_rds" {
  allocated_storage    = 20
  engine               = "mysql"
  engine_version       = "8.0"
  instance_class       = "db.t3.large"
  db_name              = "projectdevopsdb"
  username             = "admin"
  password             = var.rds_db_password
  parameter_group_name = "default.mysql8.0"
  skip_final_snapshot  = true
  publicly_accessible  = false
  vpc_security_group_ids = [aws_security_group.rds_sg.id]
  db_subnet_group_name = aws_db_subnet_group.main.name

  tags = {
    Name = "DevOps RDS Instance"
  }
}

output "rds_instance_endpoint" {
  value = aws_db_instance.devops_rds.endpoint
}

output "rds_instance_id" {
  value = aws_db_instance.devops_rds.id
}
